
[TestRealWorldSymbolInterface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Symbol",
                span: 1:11-1:17,
            },
            Members: []dts_parser.InterfaceMember{
                &dts_parser.MethodSignature{
                    Name: &dts_parser.Ident{
                        Name: "toString",
                        span: 3:5-3:13,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 3:17-3:23,
                    },
                    doc: "/** Returns a string representation of an object. */",
                    span: 3:5-3:23,
                },
                &dts_parser.MethodSignature{
                    Name: &dts_parser.Ident{
                        Name: "valueOf",
                        span: 6:5-6:12,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 10,
                        span: 6:16-6:22,
                    },
                    doc: "/** Returns the primitive value of the specified object. */",
                    span: 6:5-6:22,
                },
            },
            span: 1:1-7:2,
        },
    },
}
---

[TestCommentsInObjectTypes/single_line_comment_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 1:22-1:26,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:28-1:34,
                        },
                        doc: "/** doc */",
                        span: 1:22-1:34,
                    },
                },
                span: 1:12-1:36,
            },
            span: 1:1-1:36,
        },
    },
}
---

[TestCommentsInObjectTypes/block_comment_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 1:25-1:29,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:31-1:37,
                        },
                        span: 1:25-1:37,
                    },
                },
                span: 1:12-1:39,
            },
            span: 1:1-1:39,
        },
    },
}
---

[TestCommentsInObjectTypes/multiple_comments_before_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 1:32-1:36,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:38-1:44,
                        },
                        span: 1:32-1:44,
                    },
                },
                span: 1:12-1:46,
            },
            span: 1:1-1:46,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_between_properties - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "a",
                            span: 1:14-1:15,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:17-1:23,
                        },
                        span: 1:14-1:23,
                    },
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "b",
                            span: 1:39-1:40,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:42-1:48,
                        },
                        doc: "/** doc for b */",
                        span: 1:39-1:48,
                    },
                },
                span: 1:12-1:50,
            },
            span: 1:1-1:50,
        },
    },
}
---

[TestCommentsInObjectTypes/comment_after_separator - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "a",
                            span: 1:14-1:15,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:17-1:23,
                        },
                        span: 1:14-1:23,
                    },
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "b",
                            span: 1:33-1:34,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:36-1:42,
                        },
                        doc: "/** doc */",
                        span: 1:33-1:42,
                    },
                },
                span: 1:12-1:44,
            },
            span: 1:1-1:44,
        },
    },
}
---

[TestCommentsInObjectTypes/multi-line_JSDoc_comment - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "prop",
                            span: 6:5-6:9,
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 6:11-6:17,
                        },
                        doc: "/**\n     * This is a property\n     * with a multi-line comment\n     */",
                        span: 6:5-6:17,
                    },
                },
                span: 1:12-7:2,
            },
            span: 1:1-7:2,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_before_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.MethodSignature{
                        Name: &dts_parser.Ident{
                            Name: "getValue",
                            span: 1:29-1:37,
                        },
                        ReturnType: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:41-1:47,
                        },
                        doc: "/** Gets value */",
                        span: 1:29-1:47,
                    },
                },
                span: 1:12-1:49,
            },
            span: 1:1-1:49,
        },
    },
}
---

[TestCommentsInObjectTypes/comments_before_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeAnn: &dts_parser.ObjectType{
                Members: []dts_parser.InterfaceMember{
                    &dts_parser.IndexSignature{
                        KeyName: &dts_parser.Ident{
                            Name: "key",
                            span: 1:29-1:32,
                        },
                        KeyType: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:34-1:40,
                        },
                        ValueType: &dts_parser.PrimitiveType{
                            span: 1:43-1:46,
                        },
                        doc: "/** Index sig */",
                        span: 1:28-1:46,
                    },
                },
                span: 1:12-1:48,
            },
            span: 1:1-1:48,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comment_after_question_mark - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:25-1:31,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:45-1:51,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 1:54-1:61,
                },
                span: 1:15-1:61,
            },
            span: 1:1-1:61,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comment_after_colon - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:25-1:31,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:34-1:40,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 1:54-1:61,
                },
                span: 1:15-1:61,
            },
            span: 1:1-1:61,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/inline_comments_after_both - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:25-1:31,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:42-1:48,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 1:60-1:67,
                },
                span: 1:15-1:67,
            },
            span: 1:1-1:67,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/line_comment_after_question_mark - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:25-1:31,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 2:5-2:11,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 2:14-2:21,
                },
                span: 1:15-2:21,
            },
            span: 1:1-2:21,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/line_comment_after_colon - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:6-1:9,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:10-1:11,
                    },
                    span: 1:10-1:11,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                ExtendsType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:25-1:31,
                },
                TrueType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:34-1:40,
                },
                FalseType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 2:5-2:12,
                },
                span: 1:15-2:12,
            },
            span: 1:1-2:12,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/simplified_Awaited_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Awaited",
                span: 1:6-1:13,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:14-1:15,
                    },
                    span: 1:14-1:15,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:19-1:20,
                    },
                    span: 1:19-1:20,
                },
                ExtendsType: &dts_parser.UnionType{
                    Types: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 3,
                            span: 1:29-1:33,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 4,
                            span: 1:36-1:45,
                        },
                    },
                    span: 1:29-1:45,
                },
                TrueType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:48-1:49,
                    },
                    span: 1:48-1:49,
                },
                FalseType: &dts_parser.ConditionalType{
                    CheckType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 2:5-2:6,
                        },
                        span: 2:5-2:6,
                    },
                    ExtendsType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 2:15-2:21,
                    },
                    TrueType: &dts_parser.PrimitiveType{
                        Kind: 5,
                        span: 2:24-2:29,
                    },
                    FalseType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 3:5-3:6,
                        },
                        span: 3:5-3:6,
                    },
                    span: 2:5-3:6,
                },
                span: 1:19-3:6,
            },
            span: 1:1-3:6,
        },
    },
}
---

[TestInlineCommentsInConditionalTypes/full_Awaited-like_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Awaited",
                span: 1:6-1:13,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:14-1:15,
                    },
                    span: 1:14-1:15,
                },
            },
            TypeAnn: &dts_parser.ConditionalType{
                CheckType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:19-1:20,
                    },
                    span: 1:19-1:20,
                },
                ExtendsType: &dts_parser.UnionType{
                    Types: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 3,
                            span: 1:29-1:33,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 4,
                            span: 1:36-1:45,
                        },
                    },
                    span: 1:29-1:45,
                },
                TrueType: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:48-1:49,
                    },
                    span: 1:48-1:49,
                },
                FalseType: &dts_parser.ConditionalType{
                    CheckType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 2:5-2:6,
                        },
                        span: 2:5-2:6,
                    },
                    ExtendsType: &dts_parser.IntersectionType{
                        Types: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 12,
                                span: 2:15-2:21,
                            },
                            &dts_parser.ObjectType{
                                Members: []dts_parser.InterfaceMember{
                                    &dts_parser.MethodSignature{
                                        Name: &dts_parser.Ident{
                                            Name: "then",
                                            span: 2:26-2:30,
                                        },
                                        Params: []*dts_parser.Param{
                                            &dts_parser.Param{
                                                Name: &dts_parser.Ident{
                                                    Name: "onfulfilled",
                                                    span: 2:31-2:42,
                                                },
                                                Type: &dts_parser.InferType{
                                                    TypeParam: &dts_parser.TypeParam{
                                                        Name: &dts_parser.Ident{
                                                            Name: "F",
                                                            span: 2:50-2:51,
                                                        },
                                                        span: 2:44-2:51,
                                                    },
                                                    span: 2:44-2:51,
                                                },
                                                span: 2:31-2:51,
                                            },
                                        },
                                        ReturnType: &dts_parser.PrimitiveType{
                                            span: 2:54-2:57,
                                        },
                                        span: 2:26-2:57,
                                    },
                                },
                                span: 2:24-2:60,
                            },
                        },
                        span: 2:15-2:60,
                    },
                    TrueType: &dts_parser.ConditionalType{
                        CheckType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "F",
                                span: 3:9-3:10,
                            },
                            span: 3:9-3:10,
                        },
                        ExtendsType: &dts_parser.ParenthesizedType{
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "value",
                                            span: 3:21-3:26,
                                        },
                                        Type: &dts_parser.InferType{
                                            TypeParam: &dts_parser.TypeParam{
                                                Name: &dts_parser.Ident{
                                                    Name: "V",
                                                    span: 3:34-3:35,
                                                },
                                                span: 3:28-3:35,
                                            },
                                            span: 3:28-3:35,
                                        },
                                        span: 3:21-3:35,
                                    },
                                },
                                ReturnType: &dts_parser.PrimitiveType{
                                    span: 3:40-3:43,
                                },
                                span: 3:20-3:43,
                            },
                            span: 3:19-3:44,
                        },
                        TrueType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Awaited",
                                span: 4:13-4:20,
                            },
                            TypeArgs: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "V",
                                        span: 4:21-4:22,
                                    },
                                    span: 4:21-4:22,
                                },
                            },
                            span: 4:13-4:23,
                        },
                        FalseType: &dts_parser.PrimitiveType{
                            Kind: 5,
                            span: 5:9-5:14,
                        },
                        span: 3:9-5:14,
                    },
                    FalseType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 6:5-6:6,
                        },
                        span: 6:5-6:6,
                    },
                    span: 2:5-6:6,
                },
                span: 1:19-6:6,
            },
            span: 1:1-6:7,
        },
    },
}
---
